<resources>
    /* application */
    <string name="app_name">Trail</string>


    <string name="location_permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

    /* notification */
    <string name="location_service_channel_title">New Pin Location</string>


    /* general */
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="settings">Settings</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Profile">Profile</string>
    <string name="Preferences">Preferences</string>
    <string name="next">Next</string>
    
    /* login */
    <string name="heading_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="text_create_account">OR Create Account</string>
    <string name="button_sign_up">JOIN</string>

    <string name="email_format_error">Not a valid E-mail format</string>

    /* sign up */
    <string name="heading_signup">Sign Up</string>
    <string name="verify_password">Re-enter Password</string>
    <string name="hint_nickname">Nickname (~20 characters)</string>
    <string name="button_set_preferences">Set Preferences</string>
    <string name="account_created">Account Created</string>
    <string name="button_complete">Complete</string>

    <string name="dialog_title_journey_type">Set Journey Type</string>
    <string name="dialog_title_lifestyle">Set Lifesyle</string>


    /* dashboard */
    <string name="heading_dashboard">Dashboard</string>


    /* user preferences */
    <string-array name="journey_type">
        <item>Adventure</item>
        <item>Popular Places</item>
        <item>Hipster</item>
        <item>Solo Traveller</item>
        <item>Nomadic</item>
        <item>Food Lover</item>
        <item>Geek</item>
        <item>Shopping</item>
        <item>History</item>
        <item>Local Places</item>
        <item>Festival</item>
        <item>Art</item>
        <item>Academic</item>
    </string-array>

    <string-array name="lifestyle">
        <item>Active</item>
        <item>Bohemian</item>
        <item>Hipster</item>
        <item>Solo</item>
        <item>Nomadic</item>
        <item>Rural</item>
        <item>Traditional</item>
        <item>Back to the Land</item>
        <item>Digital</item>
        <item>Workaholic</item>
        <item>Socialite</item>
        <item>Academic</item>
        <item>Groupie</item>
        <item>Minimalist</item>
    </string-array>

    <string name="heading_record">Record</string>
    <string name="heading_trail">Create New Journey</string>


    <string name="dialog_camera_btn">Camera</string>
    <string name="dialog_gallery_btn">Gallery</string>
    <string name="dialog_cancel_btn">Cancel</string>



</resources>